detekt-rules/naming/src/test/resources/InvalidPackageDeclarationSpec/src/com/example/File.kt
package io.foo.bar

class C
